--- a/proyecto-portafolio/src/App.css
+++ b/proyecto-portafolio/src/App.css
@@ -266,7 +266,7 @@ h2{
   width: 90%;
   height: fit-content;
 
-  margin: auto;
+  margin: 0px auto 80px auto;
 }
 
 .project-container{
@@ -302,3 +302,82 @@ h2{
 .project-container p{
   font-size: 20px;
 }
+
+/*section contact*/
+
+.contact-section{
+  width: 90%;
+
+  margin: 0px auto 80px auto;
+
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.image-container{
+  width: 40vw;
+
+  background: radial-gradient(#ffdf3e61 30%, rgb(32, 5, 74)70%);
+}
+
+.image-container img{
+  width: 100%;
+  height: 100%;
+
+  object-fit: contain;
+}
+
+form{
+  background-color: var(--white-transparent);
+
+  padding: 25px;
+
+  border-radius: 25px;
+}
+
+form h3{
+  font-size: 30px;
+
+  margin-bottom: 20px;
+
+  color: white;
+}
+
+.container-input{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  margin-bottom: 20px;
+}
+
+.container-input label{
+  color: white;
+}
+
+.container-input input, .container-input textarea{
+  padding: 10px;
+
+  border-radius: 8px;
+
+  font-size: 15px;
+}
+
+.container-input textarea{
+  resize: none;
+  height: 125px;
+}
+
+button{
+
+  background-color: var(--main-color);
+
+  color: white;
+  font-size: 18px;
+
+  padding: 10px 20px;
+
+  border-radius: 10px;
+}
+
