--- a/proyecto-carrito-de-compras/src/App.css
+++ b/proyecto-carrito-de-compras/src/App.css
@@ -1,42 +1,170 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  border: none;
+
+  font-family: sans-serif;
+
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*NAV BAR*/
+
+.nav{
+  width: 90%;
+  height: 70px;
+
+  margin: auto;
+
+  color: gray;
+  font-size: 14px;
+
+  border-bottom: solid 1px rgba(0, 0, 0, 0.109);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.nav-izq{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
 }
 
-.card {
-  padding: 2em;
+.nav-izq ul{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+
+  list-style: none;
 }
 
-.read-the-docs {
-  color: #888;
+.logo-container{
+  width: 150px;
+  height: 30px;
+  background-image: url(./images/logo.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+/*NAV DERECHO*/
+
+.nav-der{
+  display: flex;
+
+  gap: 20px;
+}
+
+.carrito-button{
+  background-image: url('./images/icon-cart.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+
+  background-color: transparent;
+
+  width: 40px;
+  height: 40px;
+}
+
+.perfil{
+  background-image: url('./images/image-avatar.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+
+
+  width: 40px;
+  height: 40px;
+
+  margin: auto;
+  border-radius: 100%;
+}
+
+/*IMAGES*/
+
+.container-images{
+  display: grid;
+  
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+
+
+  width: 400px;
+  height: 600px;
+
+  grid-template-areas: 
+  "bi-1 bi-1 bi-1 bi-1"
+  "bi-1 bi-1 bi-1 bi-1"
+  "bi-1 bi-1 bi-1 bi-1"
+  "bi-1 bi-1 bi-1 bi-1"
+  "i1 i2 i3 i4";
+
+  background-color: aqua;
+}
+
+.big-image{
+  grid-area: bi-1;
+
+
+
+  background-image: url(./images/image-product-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.little-image-1{
+  grid-area: i1;
+
+  width: 100px;
+  height: 100px;
+
+  background-image: url(./images/image-product-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.little-image-2{
+  grid-area: i2;
+
+  width: 100px;
+  height: 100px;
+
+  background-image: url(./images/image-product-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.little-image-3{
+  grid-area: i3;
+
+  width: 100px;
+  height: 100px;
+
+  background-image: url(./images/image-product-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.little-image-4{
+  grid-area: i4;
+
+  width: 100px;
+  height: 100px;
+
+  background-image: url(./images/image-product-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
