--- a/proyecto-portafolio/client/src/App.css
+++ b/proyecto-portafolio/client/src/App.css
@@ -247,6 +247,8 @@ h2{
   font-size: 4rem;
 
   margin-bottom: 0.3em;
+  
+  -webkit-text-stroke: 1px rgba(0, 0, 0, 0.482);
 }
 
 .someProjects-h2{
@@ -532,16 +534,13 @@ h2{
   font-size: 1.2rem;
 }
 
-/*section contact*/
+/*section contact 900-750*/
 
 .contact-section{
   width: 80vw;
 
   margin: 0px auto 5em auto;
 
-  display: flex;
-  justify-content: center;
-  gap: 2em;
 
   @media screen and (max-width: 751px){
     flex-direction: column;
@@ -557,15 +556,53 @@ h2{
 
 }
 
+.contact-section h2{
+  display: none;
+
+  /*mas de 750px*/
+  @media screen and (min-width: 750px){
+    display: block;
+  }
+
+  @media screen and (min-width: 900px){
+    display: none;
+  }
+}
+
+.container-form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+
+  width: 100%;
+
+  @media screen and (min-width: 900px){
+    flex-direction: row;
+  }
+
+  @media screen and (max-width: 750px){
+    flex-direction: column;
+  }
+}
+
 .image-container{
   width: 32vw;
 
   display: flex;
   align-items: center;
 
-  @media screen and (max-width: 751px){
-    width: 80vw;
-  }
+  display: none;
+
+    @media screen and (min-width: 900px){
+      width: 40vw;
+      display: block;
+    }
+  
+    @media screen and (max-width: 750px){
+      display: block;
+      width: 60vw;
+    }
 }
 
 .circle{
@@ -590,10 +627,21 @@ form{
 
   border-radius: 2em;
 
-  @media screen and (max-width: 751px){
+  margin: auto;
+
+/*   @media screen and (max-width: 751px){
     width: 70vw;
-    margin: auto;
+    
+  } */
+
+  @media screen and (max-width: 900px){
+    width: 80vw;
   }
+
+  @media screen and (max-width: 750px){
+    width: 60vw;
+  }
+
 }
 
 form h3{
