--- a/proyecto-portafolio/client/src/App.css
+++ b/proyecto-portafolio/client/src/App.css
@@ -5,7 +5,7 @@
 :root{
   --main-color: #1A0243;
   --yellow: #ffdf3e;
-  --white-transparent: rgba(255,255,255,0.18);
+  --white-transparent: #4403bcbb;
 
   --bubble-type: "Lilita One", sans-serif;
   --no-bubble-type: "Inconsolata", monospace;
@@ -228,6 +228,7 @@ h1{
 h1 span{
   color: var(--yellow);
   font-family: var(--bubble-type);
+  -webkit-text-stroke: 0.1px rgba(0, 0, 0);
 }
 
 h1 + span{
@@ -248,7 +249,7 @@ h2{
 
   margin-bottom: 0.3em;
   
-  -webkit-text-stroke: 1px rgba(0, 0, 0, 0.482);
+  -webkit-text-stroke: 0.1px rgba(0, 0, 0);
 }
 
 .someProjects-h2{
@@ -259,7 +260,7 @@ h2{
 
   width: 80vw;
 
-  margin: 0px auto 5em auto;
+  margin: 0px auto 11em auto;
 
   display: flex;
   align-items: start;
@@ -279,30 +280,6 @@ h2{
   }
 }
 
-.about-me-container{
-
-  border-radius: 2em;
-
-  background-color:#10002D;
-
-  padding: 2em;
-
-  color: white;
-
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-
-}
-
-.about-me-up{
-  font-size: 1.2rem;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .skills-container{
 
   display: flex;
@@ -310,6 +287,8 @@ h2{
   align-items: center;
   flex-direction: column;
   gap: 2em;
+
+  position: relative;
 }
 
 
@@ -396,31 +375,112 @@ h2{
   }
 }
 
+.slider{
+  position: absolute;
+  bottom: -7.5em;
+
+  width: 100vw;
+  height: 5em;
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    black,
+    transparent
+  );
+
+  overflow-x: hidden;
+}
+
+.list-images{
+  display: flex;
+
+  min-width: 50em;
+
+  position: relative;
+}
+
+.slider .list-images .item{
+  width: 5em;
+  height: 5em;
+
+  position: absolute;
+  left: 100%;
+  animation: autoRun 10s linear infinite;
+  animation-delay: calc((var(--position) - 1)* 1s);
+}
+
+.slider .list-images .item img{
+  width: 100%;
+  height: 100%;
+
+  object-fit: contain;
+}
+
+@keyframes autoRun {
+  from{
+    left: 100%;
+  }to{
+    left: -5em;
+  }
+}
 
 /*ABOUT ME*/
 
-.about-me-down{
+.about-me-section{
+
+  width: 80vw;
+  height: fit-content;
+
+  margin: 0px auto 5em auto;
+
+  @media screen and (max-width: 751px){
+    width: 70vw;
+  }
+
+  @media screen and (max-width: 600px){
+    width: 80vw;
+  }
+}
+
+
+.about-me-container{
+
+  border-radius: 2em;
+
+  background-color:#10002D;
+
+  padding: 2em;
+
+  color: white;
+
+  display: flex;
+  align-items: start;
+  gap: 2.5em;
+
+  font-size: 1.2rem;
+
+  @media screen and (max-width: 751px){
+    flex-direction: column;
+  }
+
+}
+
+.about-me-up{
+
   display: flex;
   justify-content: center;
   align-items: center;
 
-  position: relative;
+  margin: auto;
 
 }
 
-.about-me-down h2{
-  text-align: center;
+.about-me-down{
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 
-  text-wrap: nowrap;
 }
-
-@media screen and (max-width: 850px) {
-  
-  .about-me-down h2{
-    text-wrap: wrap;
-  }
-}
-
 
 .yoSaludando{
   height: 12em;
@@ -441,14 +501,6 @@ h2{
   50%{
     transform: translateY(-2px);
   }
-}
-
-.cv-container{
-  height: 150px;
-
-  background-color: var(--main-color);
-
-  border-radius: 52px;
 }
 
 /*SECTION PROJECTS*/
@@ -488,7 +540,7 @@ h2{
   display: flex;
   gap: 2em;
 
-  background-color: #27016e;
+  background-color: var(--white-transparent);
 
   border-radius: 2.6em;
 
@@ -509,7 +561,7 @@ h2{
 .project-container img{
   width: 50%;
 
-  object-fit: contain;
+  object-fit: cover;
 
   border-radius: 2em;
 
@@ -522,16 +574,71 @@ h2{
   }
 }
 
+.info-container{
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
 .project-container h3{
   font-weight: bold;
 
   font-size: 2.5rem;
 
-  margin-bottom: 0.6em;
+  margin-bottom: 0.1em;
 }
 
 .project-container p{
   font-size: 1.2rem;
+}
+
+.container-technologies{
+  width: fit-content;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4em;
+
+}
+
+.technologie-container{
+  height: 3em;
+  width: 3em;
+
+  border-radius: 100px;
+}
+
+.technologie-container img{
+  width: 100%;
+  height: 100%;
+
+  object-fit: fill;
+}
+
+.container-buttons{
+  display: flex;
+  gap: 0.5em;
+}
+
+.container-buttons button{
+  width: 50%;
+}
+
+.container-buttons button:nth-child(2){
+  background-color: black;
+
+  border: solid 0.1em white;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4em;
+}
+
+.container-buttons button:nth-child(2) img{
+  width: 1.6em;
+  height: 1.6em;
 }
 
 /*section contact 900-750*/
@@ -682,11 +789,13 @@ button{
   background-color: var(--main-color);
 
   color: white;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
 
-  padding: 1em 1.5em;
 
-  border-radius: 1em;
+  padding: 0.4em 1em;
+
+  border-radius: 0.7em;
 }
 
 /*FOOTER SECTION*/
