--- a/proyecto-rock-paper/src/App.css
+++ b/proyecto-rock-paper/src/App.css
@@ -37,11 +37,16 @@ body{
     min-height: 100vh;
 
     padding: 3em 0;
+
 }
+
+
 
 html{
     font-size: 16px;
 }
+
+
 
 /* SCORE */
 
@@ -85,6 +90,10 @@ html{
 .score-container span:nth-child(2){
     font-size: 3rem;
     font-weight: 600;
+}
+
+.up-container img{
+    width: 15rem;
 }
 
 /* CONTAINER BUTTONS FIRST PART */
@@ -136,7 +145,7 @@ html{
 .rock-button::after{
     content: '';
     
-    border: 1.4em solid var(--rock-color-light);
+    border: 1.4rem solid var(--rock-color-light);
 }
 
 .paper-button{
@@ -154,7 +163,7 @@ html{
 .paper-button::after{
     content: '';
     
-    border: 1.4em solid var(--hand-color-light);
+    border: 1.4rem solid var(--hand-color-light);
 }
 
 .scisor-button{
@@ -172,7 +181,7 @@ html{
 .scisor-button::after{
     content: '';
 
-    border: 1.4em solid var(--scisor-color-light);
+    border: 1.4rem solid var(--scisor-color-light);
 }
 
 .rock-button::after, .paper-button::after, .scisor-button::after{
@@ -195,6 +204,8 @@ html{
     box-shadow:inset 0em 0.6em rgba(0, 0, 0, 0.188);
 }
 
+/*DESPUES DE LA SELECCION*/
+
 .container-buttons-selected{
     transition: all 1s ease !important;
 
@@ -203,6 +214,8 @@ html{
     background-image: none;
 
     width: 70vw;
+    max-width: 700px;
+    
 }
 
 .rock-selected, .paper-selected, .scisor-selected{
@@ -223,6 +236,7 @@ html{
 }
 
 .resRobot{
+
     width: 14rem !important;
     height: 14rem !important;
 
@@ -230,7 +244,7 @@ html{
 
     position: absolute;
 
-    left: calc(100% - 12rem) !important;
+    left: calc(100% - 14rem) !important;
     top: 0em !important;
     bottom: 0em !important;
     margin: auto !important;
@@ -261,6 +275,7 @@ html{
 }
 
 .p-again button{
+
     transition: all 1s ease !important;
     transition-delay: 10s !important;
 
@@ -270,10 +285,92 @@ html{
     font-weight: 600;
     color: red;
 
-    width: 10em;
-    height: 3em;
-
     border-radius: 0.5em;
 
     box-shadow: 0 0 2em rgba(0, 0, 0, 0.348);
+
+    font-size: 1rem;
+
+    padding: 1rem 2rem;
+}
+
+@media screen and (max-width: 1000px) {
+    
+    .rock-selected, .paper-selected, .scisor-selected{
+        width: 12rem !important;
+        height: 12rem !important;
+    }
+
+    .resRobot{
+        width: 12rem !important;
+        height: 12rem !important;
+    }
+}
+
+
+@media screen and (max-width: 917px) {
+
+    .container-buttons-selected{
+        max-width: 500px;
+    }
+
+    .rock-selected, .paper-selected, .scisor-selected{
+        width: 14rem !important;
+        height: 14rem !important;
+    }
+
+    .resRobot{
+        width: 14rem !important;
+        height: 14rem !important;
+    }
+
+    .p-again{
+        top: 22em;
+    }
+}
+
+
+@media screen and (max-width: 667px) {
+
+    .container-buttons-selected{
+        max-width: 430px;
+    }
+
+    .container-buttons button{
+        height: 11rem;
+        width: 11rem;
+    }
+
+    .scisor-button, .paper-button, .rock-button{
+        background-size: 40%;
+    }
+
+    html{
+        font-size: 15px;
+    }  
+
+}
+
+@media screen and (max-width: 600px) {
+    html{
+        font-size: 13px;
+    }    
+}
+
+@media screen and (max-width: 539px) {
+    html{
+        font-size: 10px;
+    }    
+}
+
+@media screen and (max-width: 410px) {
+    html{
+        font-size: 9px;
+    }    
+}
+
+@media screen and (max-width: 360px) {
+    html{
+        font-size: 8px;
+    }    
 }
