--- a/proyecto-paises/src/App.css
+++ b/proyecto-paises/src/App.css
@@ -8,6 +8,9 @@
   font-family: sans-serif;
 }
 
+body{
+  background-color: rgb(39, 39, 39);
+}
 
 .container-paises{
   padding: 0 5vw;
@@ -28,6 +31,8 @@
   border-radius: 0.5rem;
 
   box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.097);
+
+  cursor: pointer;
 }
 
 .bandera-container{
@@ -91,6 +96,16 @@ nav h1{
 
 /* BUSCADOR */
 
+.nm{
+  margin: auto;
+
+  color: rgba(255, 255, 255, 0.578);
+
+  margin-top: 7rem;
+
+  font-size: 1.5rem;
+}
+
 .buscador-container{
   padding: 5vh 5vw;
 
@@ -132,4 +147,122 @@ input{
   color: white;
 
   font-size: 1rem;
+}
+
+/* PAISSELECTED */
+
+.back{
+
+  align-self: start;
+
+  margin-left: 5vw;
+
+  width: fit-content;
+
+  background-color: rgb(58, 58, 58);
+
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.264);
+
+  padding: 1rem 4rem;
+
+  border-radius: 5px;
+
+  color: white;
+
+  font-size: 1rem;
+
+  cursor: pointer;
+}
+
+.pais-selected-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+
+  margin-top: 6rem;
+
+  color: rgb(225, 225, 225);
+}
+
+.pais-desc-container{
+  width: 90vw;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+}
+
+.pais-desc-container-bandera-container{
+  width: 45vw;
+}
+
+.pais-desc-container-bandera-container img{
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
+}
+
+.pais-desc-container-desc-container{
+  width: 45vw;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.top-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h2{
+  text-align: left;
+
+  width: 100%;
+}
+
+.top-container{
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+}
+
+.mini-info-container{
+  padding: 0.5rem 0;
+}
+
+.mini-info-container label{
+  font-weight: bold;
+}
+
+.mini-info-container span{
+  font-weight: lighter;
+}
+
+.border-countries-container{
+  margin-top: 1rem;
+
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.border-countries-container label{
+  font-weight: bold;
+}
+
+.border-countries-container span{
+  padding: 0.5rem 1rem;
+
+  border-radius: 0.1rem;
+
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.264);
+
+  background-color: rgb(58, 58, 58);
 }
