--- a/proyecto-paises/src/App.css
+++ b/proyecto-paises/src/App.css
@@ -1,12 +1,12 @@
 :root{
-  --whithe-light: rgb(231, 231, 231);
-  --whithe-dark: rgba(255, 255, 255, 0.578);
-  --dark-light: rgb(58, 58, 58);
-  --dark-dark: rgb(39, 39, 39);
-  --shadow: rgba(0, 0, 0, 0.264);
+  --whithe-light: rgb(53, 53, 53);
+  --whithe-dark: rgba(99, 99, 99, 0.578);
+  --dark-light: rgb(255, 255, 255);
+  --dark-dark: rgb(255, 255, 255);
+  --shadow: rgba(0, 0, 0, 0.102);
 }
 
-:root{
+.dark{
   --whithe-light: rgb(231, 231, 231);
   --whithe-dark: rgba(255, 255, 255, 0.578);
   --dark-light: rgb(58, 58, 58);
@@ -99,9 +99,10 @@ nav{
 
   color: var(--whithe-light);
 
-  padding: 2rem 5vw;
+  padding: 0 5vw;
 
   width: 100%;
+  height: 6rem;
 }
 
 
@@ -268,9 +269,12 @@ input{
   justify-content: center;
   gap: 2rem;
 
-  margin-top: 6rem;
 
   color: var(--whithe-light);
+
+  background-color: var(--dark-dark);
+
+  min-height: calc(100vh - 6rem);
 }
 
 .pais-desc-container{
@@ -280,6 +284,8 @@ input{
   align-items: center;
   justify-content: center;
   gap: 5rem;
+
+  background-color: var(--dark-dark);
 }
 
 .pais-desc-container-bandera-container{
