--- a/proyecto-paises/src/App.css
+++ b/proyecto-paises/src/App.css
@@ -14,6 +14,16 @@
   --shadow: rgba(0, 0, 0, 0.264);
 }
 
+html{
+  font-size: 17px;
+}
+
+@media screen and (max-width: 765px){
+  html{
+    font-size: 14px;
+  }
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -33,9 +43,13 @@ body{
 
   background-color: var(--dark-dark);
 
+  height: fit-content;
+
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
+
+  min-height: 100vh;
 }
 
 .container-paises div{
@@ -49,6 +63,8 @@ body{
   box-shadow: 0rem 0rem 1rem var(--shadow);
 
   cursor: pointer;
+
+  height: fit-content;
 }
 
 .bandera-container{
@@ -58,7 +74,7 @@ body{
 
 .bandera-container img{
   width: 100%;
-  height: 100%;
+  height: 11rem;
 
   object-fit: cover;
 
@@ -105,7 +121,6 @@ nav{
   height: 6rem;
 }
 
-
 nav h1{
   font-weight: bold;
 }
@@ -118,6 +133,12 @@ nav h1{
   font-size: 1.2rem;
 
   gap: 0.7rem;
+}
+
+@media screen and (max-width: 364px){
+  .darkMode-container span:nth-child(2){
+    display: none;
+  }
 }
 
 .darkMode-container span:nth-child(1){
@@ -153,6 +174,22 @@ nav h1{
   align-items: center;
 }
 
+@media screen and (max-width: 765px){
+  .buscador-container{
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .buscador-container div:nth-child(1){
+    width: 90vw;
+    justify-content: start;
+  }
+
+  .buscador-container div:nth-child(2){
+    align-self: start;
+  }
+}
+
 .filtro-container{
   padding: 0 1.5rem;
 
@@ -176,7 +213,7 @@ select{
 
 input{
 
-  width: 30vw;
+  width: 100%;
   height: 3rem;
 
   appearance: none;
@@ -252,6 +289,18 @@ input{
   gap: 0.5em;
 }
 
+@media screen and (max-width: 892px){
+  .back{
+    margin-left: 15vw;
+  }
+}
+
+@media screen and (max-width: 500px){
+  .back{
+    margin-left: 5vw;
+  }
+}
+
 .back span{
   height: 1rem;
   width: 1rem;
@@ -266,9 +315,9 @@ input{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 2rem;
 
+  padding-top: 5rem;
 
   color: var(--whithe-light);
 
@@ -288,8 +337,34 @@ input{
   background-color: var(--dark-dark);
 }
 
-.pais-desc-container-bandera-container{
-  width: 45vw;
+@media screen and (max-width: 892px){
+  .pais-desc-container{
+    flex-direction: column;
+
+    gap: 2rem;
+  }
+
+  .pais-desc-container-desc-container{
+    width: 100%;
+  }
+
+  .pais-desc-container{
+    width: 70vw;
+  }
+
+  .pais-selected-container{
+    padding-top: 3rem;
+  }
+}
+
+@media screen and (max-width: 500px){
+  .pais-desc-container-desc-container{
+    width: 100%;
+  }
+
+  .pais-desc-container{
+    width: 90vw;
+  }
 }
 
 .pais-desc-container-bandera-container img{
@@ -300,18 +375,10 @@ input{
 }
 
 .pais-desc-container-desc-container{
-  width: 45vw;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
-}
-
-.top-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 h2{
@@ -324,6 +391,17 @@ h2{
   display: flex;
   align-items: start;
   justify-content: space-between;
+  gap: 6rem;
+}
+
+@media screen and (max-width: 1046px){
+  .pais-desc-container{
+    gap: 2rem;
+  }
+
+  .top-container{
+    gap: 1rem;
+  }
 }
 
 .mini-info-container{
@@ -343,6 +421,7 @@ h2{
 
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 0.8rem;
 }
 
