--- a/proyecto-paises/src/App.css
+++ b/proyecto-paises/src/App.css
@@ -119,6 +119,10 @@ nav{
 
   width: 100%;
   height: 6rem;
+
+  position: relative;
+  z-index: 100;
+  box-shadow: 0 0 1rem var(--shadow);
 }
 
 nav h1{
