--- a/proyecto-portafolio/client/src/App.css
+++ b/proyecto-portafolio/client/src/App.css
@@ -81,13 +81,13 @@ body{
   }
 }
 
-.navbar {
+.navbar{
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;/* 
   background: linear-gradient(var(--main-color), ); */
-  background-color: #10002D;
+  background: linear-gradient(black, #10002D, transparent);
   z-index: 1000;
   padding: 1.5em 10%;
   box-sizing: border-box;
@@ -133,6 +133,10 @@ body{
 
 /* RESPONSIVE */
 @media screen and (max-width: 751px) {
+  .navbar{
+    background: #10002D;
+  }
+
   .navDer {
     display: none;
     position: absolute;
@@ -141,6 +145,7 @@ body{
     right: 0;
     /* background-color: var(--main-color); */
     background-color:#10002D;
+    
   }
 
   .navDer.open {
@@ -442,7 +447,6 @@ h2{
   }
 }
 
-
 .about-me-container{
 
   border-radius: 2em;
@@ -459,7 +463,7 @@ h2{
 
   font-size: 1.2rem;
 
-  @media screen and (max-width: 751px){
+  @media screen and (max-width: 900px){
     flex-direction: column;
   }
 
@@ -628,6 +632,11 @@ h2{
 .container-buttons button a{
   text-decoration: none;
   color: white;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .container-buttons button:nth-child(2){
@@ -806,30 +815,104 @@ button{
 /*FOOTER SECTION*/
 
 footer{
+  font-size: 1.2rem;
+
   background-color: #121212;
 
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
 
-  padding: 0 2em;
+  padding: 2rem;
+}
+
+.containerLinks{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+
+  color: white;
+}
+
+.center-container-footer{
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 0.5rem;
+}
+
+.center-container-footer a{
+  text-decoration: none;
+  color: white;
+}
+
+.izq-container-footer{
+  display: flex;
+  justify-content: center;
+  align-items: top;
+
+  color: rgb(147, 147, 147);
+}
+
+@media screen and (max-width: 937px) {
+  footer{
+    justify-content: right;
+  }
+
+  .izq-container-footer{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  footer{
+    flex-direction: column;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .center-container-footer{
+    justify-content: center;
+    align-items: center;
+
+    
+  }
+
+}
+
+.center-container-footer img{
+  width: 1.2rem;
+  height: 1.2rem;
+}
+
+.izq-container-footer p{
+  display: flex;
+  gap: 0.5rem;
+
+  height: fit-content;
+
 }
 
 .der-container-footer{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: top;
 
   color: white;
 }
 
 .name-container{
+  height: fit-content;
+
   font-size: 4.5rem;
   font-family: var(--bubble-type);
-
-  align-self: center;
+  
   line-height: 1em;
-
-  margin: 30px 0;
 }
 
 .img-footer{
